--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/argon2": "^0.15.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "geolib": "^3.3.3",
     "graphql": "^16.6.0",
     "mongodb": "^5.5.0",
     "reflect-metadata": "^0.1.13",
