test: add tests

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -13,7 +13,7 @@ services:
       - 3000:3000
     command: ['yarn', 'test:e2e', '--runInBand']
     environment:
-      - DATABASE_URL=mongodb://root:example@db:5432/dev
+      - DATABASE_URL=mongodb://db:27017/test
       - NODE_ENV=testing
       - SECRET=secret
   db:
